Cambios en los textos de la página

--- a/pagina1.html
+++ b/pagina1.html
@@ -5,12 +5,12 @@
 	<title></title>
 </head>
 <body>
-	<h1>Página 1 5</h1>
+	<h1>Página 1</h1>
 	<ul>
 		<li><a href="index.html">Inicio</a></li>
 		<li><a href="pagina1.html">Inicio</a></li>
 	</ul>
-	<p>Página 1 en este es el curso de GIT</p>
+	<p>Página 1 en este es el curso de GIT 5</p>
 
 </body>
 </html>
