--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
 	</ul>
 	<p>Hola mundo este es el curso de GIT</p>
 	<p>Hola mundo este es el curso de GIT</p>
+	<p>Hola mundo este es el curso de GIT</p>
+	<p>Hola mundo este es el curso de GIT</p>
+	<p>Hola mundo este es el curso de GIT</p>
+	<p>Hola mundo este es el curso de GIT</p>
 
 </body>
 </html>
