cambios en la pagina uno

--- a/pagina1.html
+++ b/pagina1.html
@@ -11,6 +11,9 @@
 		<li><a href="pagina1.html">Inicio</a></li>
 	</ul>
 	<p>Página 1 en este es el curso de GIT 5</p>
+	<p>Página 1 en este es el curso de GIT 5</p>
+
+	<p>Prueba</p>
 
 </body>
 </html>
