--- a/pagina1.html
+++ b/pagina1.html
@@ -5,7 +5,7 @@
 	<title></title>
 </head>
 <body>
-	<h1>Página 1</h1>
+	<h1>Página 1 123123</h1>
 	<ul>
 		<li><a href="index.html">Inicio</a></li>
 		<li><a href="pagina1.html">Inicio</a></li>
