Cambios en los archivos pricipales

--- a/pagina1.html
+++ b/pagina1.html
@@ -12,6 +12,8 @@
 	</ul>
 	<p>Página 1 en este es el curso de GIT 5</p>
 	<p>Página 1 en este es el curso de GIT 5</p>
+	<p>Página 1 en este es el curso de GIT 5</p>
+	<p>Página 1 en este es el curso de GIT 5</p>
 
 	<p>Prueba</p>
 
