--- a/contacto.html
+++ b/contacto.html
@@ -7,6 +7,8 @@
 <body>
 	<h1>Contacto</h1>
 	<h2>Esta es la pagina de Contacto Modigficao</h2>
+	<h2>Esta es la pagina de Contacto Modigficao</h2>
+	<h2>Esta es la pagina de Contacto Modigficao</h2>
 	
 </body>
 </html>
