--- a/contacto.html
+++ b/contacto.html
@@ -2,7 +2,7 @@
 <html>
 <head lang="es">
 	<meta charset="utf-8">
-	<title>Contacto</title>
+	<title>Pagina Contacto</title>
 </head>
 <body>
 	<h1>Contacto</h1>
