--- a/contacto.html
+++ b/contacto.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 	<h1>Contacto</h1>
-	<h2>Esta es la pagina de Contacto Modigficao</h2>
+	<h2>Hago este cambio</h2>
 	<h2>Esta es la pagina de Contacto Modigficao</h2>
 	<h2>Esta es la pagina de Contacto Modigficao</h2>
 	
